<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Flutter</string>
    <string name="flutter_slogan">Let\'s get chirping!</string>
    <string name="main_my_story">My Story</string>
    <string name="main_news_feed">News Feed</string>
    <string name="logout">LOGOUT</string>

    <!--Login-->
    <string name="login_name">Name</string>
    <string name="login_alias">Alias</string>
    <string name="login_password">Password</string>
    <string name="choose_profile_picture"><u>Choose Photo</u></string>
    <string name="already_have_account">Already have an account?</string>
    <string name="sign_in_here"><u>Sign In Here</u></string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up_here"><u>Sign Up Here</u></string>
    <string name="sign_up_button">SIGN UP</string>

    <!--Hashtag-->
    <string name="hashtag_feed_title">Who\'s Fluttering about\n%s</string>

    <!--UserStory-->
    <string name="story_followers">Followers</string>
    <string name="story_users_followed">Users Followed</string>
    <string name="story_following">Following</string>
    <string name="story_follow">Follow</string>
    <string name="story_follow_fail_message">Failed to follow %s</string>
    <string name="story_unfollow">UnFollow</string>
    <string name="story_unfollow_fail_message">Failed to unfollow %s</string>
    <string name="title_activity_user_list">UserListActivity</string>
    <string name="story_edit_profile_pic">Edit Profile Picture</string>
    <string name="story_update_status">Update Your Status</string>
    <string name="story_update_status_enter_url">Enter URL of Attachment</string>
    <string name="story_load_status_attachment">Load</string>
    <string name="story_post_status">Post</string>
    <string name="story_cancel_status">Cancel</string>
    <string name="person_list_title_followers">Followers of %s</string>
    <string name="person_list_title_users_followed">Users Followed by %s</string>
    <string name="person_list_has_no_friends">%s has no friends :(</string>
    <string name="person_list_my_peeps">MY PEEPS!</string>

    <!--Statuses-->
    <string name="status_could_not_retrieve_next_page">That\'s all of them! Now Get out there and do something worthwhile!</string>

    <!--Users-->
    <string name="user_could_not_retrieve_next_page">That\'s all the peeps!</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>