<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.main.story.StoryBoardFragment">

    <LinearLayout
        android:id="@+id/pro_pic_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent">

        <WebView
            android:id="@+id/story_profile_pic"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:padding="5dip" />
    </LinearLayout>

    <!--    <ImageView-->
<!--        android:id="@+id/story_profile_pic"-->
<!--        android:layout_width="150dp"-->
<!--        android:layout_height="150dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:background="@mipmap/ic_flutter_bird_round"-->
<!--        android:src="@drawable/picture_frame"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <LinearLayout
        android:id="@+id/story_edit_profile_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pro_pic_holder"
        tools:visibility="visible">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_edit_icon_blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/story_edit_profile_pic"
            android:textColor="@color/editBlue" />

    </LinearLayout>

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        tools:text="Joe Cool"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/story_edit_profile_pic" />

    <TextView
        android:id="@+id/user_alias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="\@jcool"
        android:textColor="@color/hyperlinkBlue"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name" />

    <LinearLayout
        android:id="@+id/button_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/follow_button">

        <Button
            android:id="@+id/followers_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/story_followers" />

        <Button
            android:id="@+id/users_followed_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/story_users_followed" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/story_update_status_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/button_holder"
        tools:layout_editor_absoluteX="10dp"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/story_update_status_icon"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_edit_icon" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/story_update_status_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/story_update_status" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/story_update_status_attachment_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:hint="@string/story_update_status_enter_url" />

                <Button
                    android:id="@+id/story_status_load_attachment_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/editBlue"
                    android:text="@string/story_load_status_attachment"
                    android:textColor="@color/cardview_light_background"
                    android:textStyle="bold"
                    android:visibility="gone"
                    tools:visibility="visible" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/story_status_attachment_holder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <WebView
                    android:id="@+id/story_status_attachment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:visibility="gone"
                    tools:visibility="visible" />
            </LinearLayout>


            <!--            <ImageView-->
<!--                android:id="@+id/story_status_attachment"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                tools:src="@mipmap/ic_launcher" />-->
        </LinearLayout>

        <ImageView
            android:id="@+id/story_update_status_attachment_icon"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_attachment_icon" />
    </LinearLayout>

    <Button
        android:id="@+id/story_post_status_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/editBlue"
        android:text="@string/story_post_status"
        android:textColor="@color/cardview_light_background"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/story_update_status_layout"
        app:layout_constraintTop_toBottomOf="@+id/story_update_status_layout"
        tools:visibility="visible" />


    <Button
        android:id="@+id/story_cancel_status_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/story_cancel_status"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/story_post_status_button"
        app:layout_constraintTop_toTopOf="@+id/story_post_status_button" />

    <include
        android:id="@+id/story_status_list"
        layout="@layout/fragment_status_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/story_post_status_button" />

    <Button
        android:id="@+id/follow_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/story_follow"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_alias" />


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>